// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display an alert when alert is off 1`] = `
"
/!\\\\ Alert:	High traffic generated an alert - hits = 120, triggered at 4/4/1985, 5:12:05 AM

Welcome to LogMon - an access log monitoring console application.

You can use options to customize the timing, 
and the alerting behaviour (see --help command for more infos).

Settings:
    - Overload duration:		120/5
    - Max hits per second:		12
    - Monitored file:			filename

Global stats:
    - Most visited section:		
    - Most buggy section:		
    - Total hits:				0 hit(s)
    - Avg hits/s:				0
    - Total traffic:			0 b

Current batch:
    - Current batch traffic:	0
    - Current batch hits/s:		0

Sections details:
Last updated at 4/4/1985, 5:12:20 AM


> Made with love by Ephasme... <3
> Press ESC, a, or C-c to quit."
`;

exports[`should display an recover message when alert is off but overload is zero 1`] = `
"
[o] Info:	Recovered from high traffic at Thu Apr 04 1985 05:12:05 GMT+0200 (Central European Summer Time)

Welcome to LogMon - an access log monitoring console application.

You can use options to customize the timing, 
and the alerting behaviour (see --help command for more infos).

Settings:
    - Overload duration:		0/5
    - Max hits per second:		12
    - Monitored file:			filename

Global stats:
    - Most visited section:		
    - Most buggy section:		
    - Total hits:				0 hit(s)
    - Avg hits/s:				0
    - Total traffic:			0 b

Current batch:
    - Current batch traffic:	0
    - Current batch hits/s:		0

Sections details:
Last updated at 4/4/1985, 5:12:20 AM


> Made with love by Ephasme... <3
> Press ESC, a, or C-c to quit."
`;

exports[`should display sections when filled 1`] = `
"Welcome to LogMon - an access log monitoring console application.

You can use options to customize the timing, 
and the alerting behaviour (see --help command for more infos).

Settings:
    - Overload duration:		0/5
    - Max hits per second:		12
    - Monitored file:			filename

Global stats:
    - Most visited section:		section2 (7 hit(s))
    - Most buggy section:		section2 (6 error(s))
    - Total hits:				2 hit(s)
    - Avg hits/s:				0.2
    - Total traffic:			9 b

Current batch:
    - Current batch traffic:	18
    - Current batch hits/s:		1.1

Sections details:
Last updated at 4/4/1985, 5:12:20 AM

section1: 14 bytes in 13 hit(s) (12 error(s))
section2: 17 bytes in 16 hit(s) (15 error(s))

> Made with love by Ephasme... <3
> Press ESC, a, or C-c to quit."
`;

exports[`should not display an alert when alert is on 1`] = `
"Welcome to LogMon - an access log monitoring console application.

You can use options to customize the timing, 
and the alerting behaviour (see --help command for more infos).

Settings:
    - Overload duration:		0/5
    - Max hits per second:		12
    - Monitored file:			filename

Global stats:
    - Most visited section:		
    - Most buggy section:		
    - Total hits:				0 hit(s)
    - Avg hits/s:				0
    - Total traffic:			0 b

Current batch:
    - Current batch traffic:	0
    - Current batch hits/s:		0

Sections details:
Last updated at 4/4/1985, 5:12:20 AM


> Made with love by Ephasme... <3
> Press ESC, a, or C-c to quit."
`;
